--- a/build.yaml
+++ b/build.yaml
@@ -1,18 +1,13 @@
----
 include:
-#  - board: nice_nano_v2
-#    shield: eyeslash_corne_central_dongle prospector_adapter
-#    snippet: studio-rpc-usb-uart
-#    cmake-args: -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_STUDIO_LOCKING=n
-#     artifact-name: eyeslash_corne_central_dongle
+  - board: seeeduino_xiao_ble
+    shield: corne_central_dongle
   - board: nice_nano_v2
-    shield: eyeslash_corne_central_dongle dongle_display
-    snippet: studio-rpc-usb-uart
-    cmake-args: -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_STUDIO_LOCKING=n
-    artifact-name: eyeslash_corne_central_dongle_oled
+    shield: corne_central_left
   - board: nice_nano_v2
-    shield: eyeslash_corne_peripheral_left nice_view_custom
+    shield: corne_peripheral_left
   - board: nice_nano_v2
-    shield: eyeslash_corne_peripheral_right nice_view_custom
+    shield: corne_peripheral_right
   - board: nice_nano_v2
+    shield: settings_reset
+  - board: seeeduino_xiao_ble
     shield: settings_reset
