--- a/config/boards/shields/eyeslash_corne/eyeslash_corne_central_dongle.conf
+++ b/config/boards/shields/eyeslash_corne/eyeslash_corne_central_dongle.conf
@@ -6,7 +6,7 @@ CONFIG_PINCTRL=y
 CONFIG_SPI=y
 CONFIG_INPUT=y
 # enable display drivers
-CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY=n
 
 #EXT POWER
 CONFIG_ZMK_EXT_POWER=y
@@ -33,7 +33,7 @@ CONFIG_BT_MAX_PAIRED=6
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=2
 
 # display
-CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY=n
 CONFIG_BT_BAS=n
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 CONFIG_ZMK_BACKLIGHT=y
