--- a/config/boards/shields/eyeslash_corne/eyeslash_corne_central_dongle.conf
+++ b/config/boards/shields/eyeslash_corne/eyeslash_corne_central_dongle.conf
@@ -7,6 +7,9 @@ CONFIG_SPI=y
 CONFIG_INPUT=y
 # enable display drivers
 CONFIG_ZMK_DISPLAY=n
+# Kill Zephyr display stack entirely
+CONFIG_DISPLAY=n
+CONFIG_LVGL=n
 
 #EXT POWER
 CONFIG_ZMK_EXT_POWER=y
@@ -33,13 +36,15 @@ CONFIG_BT_MAX_PAIRED=6
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=2
 
 # display
-CONFIG_ZMK_DISPLAY=n
 CONFIG_BT_BAS=n
-CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=n
 CONFIG_ZMK_BACKLIGHT=y
 CONFIG_ZMK_BACKLIGHT_BRT_START=100
 CONFIG_ZMK_BACKLIGHT_ON_START=y
 CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=n
+CONFIG_ZMK_DONGLE_DISPLAY_DONGLE_BATTERY=n
+CONFIG_ZMK_DONGLE_DISPLAY_CENTRAL_BATTERY=n
+CONFIG_ZMK_DONGLE_DISPLAY_PERIPHERAL_BATTERY=n
 
 CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_RGB_UNDERGLOW=y
