--- a/build.yaml
+++ b/build.yaml
@@ -16,3 +16,5 @@ include:
     shield: eyeslash_corne_peripheral_right nice_view_custom
   - board: nice_nano_v2
     shield: settings_reset
+  - board: xiao_ble
+    shield: settings_reset
