--- a/config/boards/shields/eyeslash_corne/eyeslash_corne_central_dongle.conf
+++ b/config/boards/shields/eyeslash_corne/eyeslash_corne_central_dongle.conf
@@ -6,10 +6,7 @@ CONFIG_PINCTRL=y
 CONFIG_SPI=y
 CONFIG_INPUT=y
 # enable display drivers
-CONFIG_ZMK_DISPLAY=n
-# Kill Zephyr display stack entirely
-CONFIG_DISPLAY=n
-CONFIG_LVGL=n
+CONFIG_ZMK_DISPLAY=y
 
 #EXT POWER
 CONFIG_ZMK_EXT_POWER=y
@@ -36,8 +33,8 @@ CONFIG_BT_MAX_PAIRED=6
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=2
 
 # display
-CONFIG_BT_BAS=n
-CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=n
+CONFIG_BT_BAS=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 CONFIG_ZMK_BACKLIGHT=y
 CONFIG_ZMK_BACKLIGHT_BRT_START=100
 CONFIG_ZMK_BACKLIGHT_ON_START=y
