--- a/build.yaml
+++ b/build.yaml
@@ -5,7 +5,7 @@ include:
 #    snippet: studio-rpc-usb-uart
 #    cmake-args: -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_STUDIO_LOCKING=n
 #     artifact-name: eyeslash_corne_central_dongle
-  - board: xiao_ble
+  - board: seeeduino_xiao_ble
     shield: eyeslash_corne_central_dongle
     snippet: studio-rpc-usb-uart
     cmake-args: -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_STUDIO_LOCKING=n
@@ -16,5 +16,5 @@ include:
     shield: eyeslash_corne_peripheral_right nice_view_custom
   - board: nice_nano_v2
     shield: settings_reset
-  - board: xiao_ble
+  - board: seeeduino_xiao_ble
     shield: settings_reset
