--- a/config/west.yml
+++ b/config/west.yml
@@ -8,6 +8,8 @@ manifest:
       url-base: https://github.com/tokyo2006
     - name: englmaxi
       url-base: https://github.com/englmaxi
+    - name: m165437 #newentry
+      url-base: https://github.com/M165437
   projects:
     - name: hammerbeam-slideshow
       remote: gpeye
@@ -22,5 +24,8 @@ manifest:
     - name: zmk-dongle-display
       remote: englmaxi
       revision: v0.3
+    - name: nice-view-gem #newentry
+      remote: m165437 
+      revision: main #newentry
   self:
     path: config
